--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -15,9 +15,7 @@ spec:
     spec:
       containers:
       - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
-        command:
-          - exit
-          - 1
+        command: ["exit", "1"]
         name: guestbook-ui
         ports:
         - containerPort: 80
