--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -14,8 +14,8 @@ spec:
         app: guestbook-ui
     spec:
       containers:
-      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
-        command: ["exit", "1"]
+      - image: ubuntu:22.04
+        command: [bash, -c, "exit 1"]
         name: guestbook-ui
         ports:
         - containerPort: 80
