--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -24,3 +24,4 @@ spec:
             port: 8080 # borked
           initialDelaySeconds: 5
           periodSeconds: 5
+          failureThreshold: 3
