--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   replicas: 1
   revisionHistoryLimit: 3
+  minReadySeconds: 1
   selector:
     matchLabels:
       app: guestbook-ui
