--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -6,6 +6,7 @@ spec:
   replicas: 1
   revisionHistoryLimit: 3
   minReadySeconds: 1
+  progressDeadlineSeconds: 2
   selector:
     matchLabels:
       app: guestbook-ui
